Fix vertical overflow rendering scrollbar

--- a/css/generic/normalys.css
+++ b/css/generic/normalys.css
@@ -30,7 +30,8 @@ h6,
 ol,
 p,
 ul {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 p {
